--- a/Docker/xrd-dev-stack/gxdch/gx-notary/.env
+++ b/Docker/xrd-dev-stack/gxdch/gx-notary/.env
@@ -87,3 +87,5 @@ d8/WG1sVi5NJVwN1vM41IUF2U8aN35c=
 LEI_CODE_VALIDATION_API='https://api.gleif.org/api/v1/lei-records/'
 VAT_ID_VALIDATION_API='https://ec.europa.eu/taxation_customs/vies/services/checkVatService'
 EORI_VALIDATION_API='https://ec.europa.eu/taxation_customs/dds2/eos/validation/services/validation'
+OPEN_CORPORATES_VALIDATION_API='https://api.opencorporates.com/v0.4/companies/search'
+OPEN_CORPORATES_VALIDATION_API_KEY=''
