--- a/src/monitor/application/build.gradle
+++ b/src/monitor/application/build.gradle
@@ -3,16 +3,12 @@ plugins {
 }
 
 dependencies {
-    implementation(platform(libs.springCloud.bom))
-
+    implementation project(':common:common-service-bootstrap')
     implementation project(':common:common-core')
     implementation project(':monitor:core')
     implementation project(':monitor-common')
 
     implementation libs.bundles.metrics
-
-    implementation("org.springframework.boot:spring-boot-starter")
-    implementation("org.springframework.cloud:spring-cloud-config-client")
 }
 
 bootJar {
