--- a/src/op-monitor-daemon/core/build.gradle
+++ b/src/op-monitor-daemon/core/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation project(':common:common-db')
     implementation project(':common:common-op-monitoring')
 
+    implementation("org.springframework.boot:spring-boot-starter")
+
     // Using HSQLDB for an in-memory database in tests.
     testImplementation libs.hsqldb
     testImplementation libs.mockito.core
