--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -67,3 +67,8 @@ load_from_properties
 
 XROAD_PARAMS="-XX:+UseG1GC -Dfile.encoding=UTF-8 -Xshare:auto -Djdk.tls.ephemeralDHKeySize=2048 \
 -Djavax.xml.accessExternalDTD=\"\" -Djavax.xml.accessExternalStylesheet=\"\" $XROAD_PARAMS"
+
+# TODO xroad8 exporting default env variables for native deployment. Verify that its a good place
+export XROAD_DEPLOYMENT_TYPE=native
+export XROAD_CONFIG_SERVER_ENABLED=true
+export XROAD_CONFIG_SERVER_URI=http://127.0.0.1:5580
