--- a/src/signer/application/build.gradle
+++ b/src/signer/application/build.gradle
@@ -3,13 +3,9 @@ plugins {
 }
 
 dependencies {
-    implementation(platform(libs.springCloud.bom))
-
+    implementation project(':common:common-service-bootstrap')
     implementation project(':common:common-core')
     implementation project(':signer:core')
-
-    implementation("org.springframework.boot:spring-boot-starter")
-    implementation("org.springframework.cloud:spring-cloud-config-client")
 }
 
 jar {
