--- a/src/addons/messagelog/messagelog-archiver/application/build.gradle
+++ b/src/addons/messagelog/messagelog-archiver/application/build.gradle
@@ -3,14 +3,10 @@ plugins {
 }
 
 dependencies {
-    implementation(platform(libs.springCloud.bom))
-
+    implementation project(':common:common-service-bootstrap')
     implementation(project(':addons:messagelog:messagelog-archiver:core'))
 
     implementation(project(':common:common-core'))
-
-    implementation("org.springframework.boot:spring-boot-starter")
-    implementation("org.springframework.cloud:spring-cloud-config-client")
 }
 
 bootJar {
