--- a/src/addons/messagelog/messagelog-archiver/core/build.gradle
+++ b/src/addons/messagelog/messagelog-archiver/core/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 
 dependencies {
-    implementation(platform(libs.springCloud.bom))
-
     implementation(project(':common:common-scheduler'))
     implementation(project(':common:common-db'))
     implementation(project(':common:common-messagelog'))
     implementation(project(':common:common-verifier'))
     implementation(project(':addons:messagelog:messagelog-db'))
     implementation(project(':asic-util'))
+
+    implementation("org.springframework.boot:spring-boot-starter")
 }
 
 jar {
