--- a/src/signer/application/src/main/resources/application-containerized.yaml
+++ b/src/signer/application/src/main/resources/application-containerized.yaml
@@ -1,9 +1,2 @@
-xroad:
-  signer:
-    key-length: 2048
-    device-configuration-file: /etc/xroad/devices.ini
-    key-configuration-file: /etc/xroad/signer/keyconf.xml
-    client-timeout: 50000
-    csr-signature-digest-algorithm: SHA-256
-    enforce-token-pin-policy: false
-    ocsp-cache-path: /opt/app/cache
+logging:
+  config: classpath:logback-containerized.xml
