--- a/src/signer/core/build.gradle
+++ b/src/signer/core/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation project(':common:common-rpc')
     implementation project(':signer-protocol')
 
+    implementation("org.springframework.boot:spring-boot-starter")
+
     // Necessary since there are jars with no adequate Maven dependencies
     api fileTree(dir: '../../libs/pkcs11wrapper', include: '*.jar')
 
@@ -35,7 +37,6 @@ dependencies {
     testImplementation project(path: ':common:common-verifier', configuration: 'testArtifacts')
 
     testImplementation libs.mockito.core
-
 
     intTestRuntimeOnly project(':addons:hwtoken')
     intTestRuntimeOnly project(':common:common-globalconf')
