chore: switch default boot http ports to unique ones per app Refs: XRDDEV-2722

--- a/src/addons/messagelog/messagelog-archiver/application/src/main/resources/application.yaml
+++ b/src/addons/messagelog/messagelog-archiver/application/src/main/resources/application.yaml
@@ -7,6 +7,9 @@ spring:
   main:
     banner-mode: log
 
+server:
+  port: 5598
+
 xroad:
   message-log:
     timestamper-client-connect-timeout: 20000
