--- a/src/proxy/application/src/main/resources/application.yaml
+++ b/src/proxy/application/src/main/resources/application.yaml
@@ -9,6 +9,9 @@ spring:
   main:
     banner-mode: log
 
+server:
+  port: 5599
+
 xroad:
   proxy:
     jetty-serverproxy-configuration-file: /etc/xroad/jetty/serverproxy.xml
@@ -54,3 +57,4 @@ xroad:
   signer:
     enforce-token-pin-policy: false
     ocsp-cache-path: /var/cache/xroad
+
