--- a/Docker/securityserver/files/ss-xroad.conf
+++ b/Docker/securityserver/files/ss-xroad.conf
@@ -57,7 +57,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:xroad-configuration-service]
-command=/usr/share/xroad/jlib/configuration-service.jar
+command=/usr/share/xroad/bin/xroad-configuration-service
 user=xroad
 autorestart=true
 stopasgroup=true
