chore: various fixes for containerized env
Refs: XRDDEV-2722

--- a/src/signer/application/src/main/resources/application-containerized.yaml
+++ b/src/signer/application/src/main/resources/application-containerized.yaml
@@ -1,5 +1,6 @@
 xroad:
   signer:
-    ocsp-cache-path=/opt/app/cache
+    ocsp-cache-path: /opt/app/cache
+
 logging:
   config: classpath:logback-containerized.xml
