--- a/src/security-server/admin-service/int-test/src/intTest/resources/application-override.yml
+++ b/src/security-server/admin-service/int-test/src/intTest/resources/application-override.yml
@@ -25,7 +25,7 @@ test-automation:
     testable-container:
       reuse-between-runs: ${reuse-between-runs}
       spring-boot:
-        base-image: eclipse-temurin:21-jammy
+        base-image: eclipse-temurin:21-noble
         jar-debug-enabled: false
         debug-port: 9000
         jacoco:
