--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -255,6 +255,41 @@ jobs:
             src/security-server/system-test/build/ss-container-logs/
             src/security-server/system-test/build/ca-container-logs/
             src/security-server/system-test/build/reports/test-automation/selenide-failures/*.png
+      - name: Load test report history
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
+        with:
+          ref: allure-gh-pages
+          path: allure-reports
+
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.9
+        if: always()
+        with:
+          gh_pages: allure-reports
+          subfolder: security-server/system-test
+          allure_history: allure-history
+          allure_results: src/security-server/system-test/build/allure-results
+
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v4
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: allure-gh-pages
+          publish_dir: allure-history
+      - name: Add link to the report as a comment 
+        uses: actions/github-script@v7
+        if: always()
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Security Server Allure report: https://nordic-institute.github.io/X-Road/security-server/system-test/${{ github.run_number }}'
+            })
   RunE2ETests:
     name: Run E2E tests
     needs: BuildAndPackageWithUnitTests
@@ -334,3 +369,37 @@ jobs:
           name: E2E report
           path: |
             src/security-server/e2e-test/build/allure-report/
+      - name: Load test report history
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
+        with:
+          ref: allure-gh-pages
+          path: allure-reports
+
+      - name: Build test report
+        uses: simple-elf/allure-report-action@v1.9
+        if: always()
+        with:
+          gh_pages: allure-reports
+          subfolder: e2e
+          allure_history: allure-history
+          allure_results: src/security-server/e2e-test/build/allure-results
+      - name: Publish test report
+        uses: peaceiris/actions-gh-pages@v4
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: allure-gh-pages
+          publish_dir: allure-history
+      - name: Add link to the report as a comment 
+        uses: actions/github-script@v7
+        if: always()
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'E2E Allure report: https://nordic-institute.github.io/X-Road/e2e/${{ github.run_number }}'
+            })
