chore: switch back hurl hosts

--- a/Docker/securityserver-v2/temp-mount-xroad/db.properties
+++ b/Docker/securityserver-v2/temp-mount-xroad/db.properties
@@ -1,3 +1,7 @@
-serverconf.hibernate.connection.url = jdbc:postgresql://db:5432/xroad
-serverconf.hibernate.connection.username=xroad
+serverconf.hibernate.connection.url = jdbc:postgresql://db-serverconf:5432/serverconf
+serverconf.hibernate.connection.username=serverconf
 serverconf.hibernate.connection.password=secret
+
+messagelog.hibernate.connection.url = jdbc:postgresql://db-messagelog:5432/messagelog
+messagelog.hibernate.connection.username=messagelog
+messagelog.hibernate.connection.password=secret
