--- a/Docker/xrd-dev-stack/hurl-src/vars.env
+++ b/Docker/xrd-dev-stack/hurl-src/vars.env
@@ -1,8 +1,8 @@
 cs_host=cs
 ca_host=testca
 ss0_host=ss0
-ss1_host=ui
-ss2_host=ss2
+ss1_host=ss1
+ss2_host=securityserver-v2-ui-1
 example_service_wsdl=http://issoap:8080/example-adapter/Endpoint?wsdl
 example_service_address=http://issoap:8080/example-adapter/Endpoint
 
