--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/acme.yml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/acme.yml
@@ -1,5 +1,3 @@
-contacts:
-  "DEV:COM:1234": member1@example.org
 eab-credentials:
   certificate-authorities:
     "Test CA":
@@ -8,3 +6,4 @@ eab-credentials:
         "DEV:COM:1234":
           kid: keyid_1
           mac-key: k21lms0bWFjXzAxdd39Dnsk2nr20am1WAx
+account-keystore-password: testPassword1234
