--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -17,6 +17,7 @@ include "common:common-admin-api"
 include "common:common-api-throttling"
 include "common:common-db"
 include "common:common-domain"
+include "common:common-mail"
 include "common:common-management-request"
 include "common:common-messagelog"
 include "common:common-op-monitoring"
