--- a/Docker/securityserver/files/etc/xroad/conf.d/acme.yml
+++ b/Docker/securityserver/files/etc/xroad/conf.d/acme.yml
@@ -1,5 +1,3 @@
-contacts:
-  'DEV:COM:1234': member1@example.org
 eab-credentials:
   certificate-authorities:
     'Test CA':
@@ -8,3 +6,4 @@ eab-credentials:
         'DEV:COM:1234':
           kid: 1
           mac-key: secretkey
+account-keystore-password: testPassword1234
