--- a/Docker/securityserver/files/etc/xroad/conf.d/mail.yml
+++ b/Docker/securityserver/files/etc/xroad/conf.d/mail.yml
@@ -1,5 +1,7 @@
-mail:
-  host: mailpit
-  port: 1025
-  username: testusername
-  password: testpassword
+host: mailpit
+port: 1025
+username: testusername
+password: testpassword
+
+contacts:
+  'DEV:COM:1234': member1@example.org
