--- a/src/packages/src/xroad/default-configuration/acme.example.yml
+++ b/src/packages/src/xroad/default-configuration/acme.example.yml
@@ -2,14 +2,6 @@
 # that is used to automate acquiring certificates from Certificate Authorities. To use this file
 # remove '.example' form the file name and replace with correct values as needed or create a new file named 'acme.yml'.
 
-# Contact emails for each Member used when ordering certificates from the ACME Servers,
-# where the key is the Member ID in the form <instance_id>:<member_class>:<member_code> and
-# should also be surrounded by quotation marks to allow for ':' (both single and double work).
-# When ordering Authentication Certificates, Security Server owner's Member ID is used.
-contacts:
-  'EU:COM:1234567-8': member1@example.org
-  'EU:GOV:9090909-1': member2@example.org
-
 # ACME external account binding credentials grouped by Certification Authorities(CA-s) and Members,
 # where CAs have their name as key and should be surrounded by quotation marks to allow spaces.
 # For Members the key is the Member ID in the form <instance_id>:<member_class>:<member_code> and
@@ -34,3 +26,7 @@ eab-credentials:
         'EU:GOV:9090909-1':
           kid: kid123
           mac-key: goodlongsecretwordthatisnotshort
+
+# This is a password of the ACME Server account PKCS #12 keystore that is populated automatically by the Security Server.
+# Keystore is at /etc/xroad/ssl/acme.p12
+account-keystore-password: acmep12Password1234
