--- a/src/security-server/admin-service/application/build.gradle
+++ b/src/security-server/admin-service/application/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation(project(":common:common-management-request"))
     implementation(project(':common:common-api-throttling'))
     implementation(project(":common:common-verifier"))
+    implementation(project(":common:common-mail"))
     implementation(project(":security-server:openapi-model"))
 
     implementation("org.springframework.boot:spring-boot-starter-security")
@@ -38,7 +39,6 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-cache")
     implementation("org.springframework.boot:spring-boot-starter-validation")
-    implementation("org.springframework.boot:spring-boot-starter-mail")
     implementation("io.micrometer:micrometer-tracing-bridge-brave")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
     implementation(libs.libpam4j)
