--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/mail.yml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/mail.yml
@@ -1,6 +1,7 @@
-mail:
-  host: testmailserver
-  port: 587
-  username: testuser
-  password: passw0rd
-  use-ssl-tls: true
+host: testmailserver
+port: 587
+username: testuser
+password: passw0rd
+use-ssl-tls: true
+contacts:
+  "DEV:COM:1234": member1@example.org
