--- a/src/configuration-client/application/src/main/resources/application.yaml
+++ b/src/configuration-client/application/src/main/resources/application.yaml
@@ -15,10 +15,11 @@ logging.level:
 
 xroad:
   configuration-client:
+    cli-mode: false
     update-interval: 60
     proxy-configuration-backup-cron: 0 15 3 * * ?
+    configuration-anchor-file: /etc/xroad/configuration-anchor.xml
     grpc:
       grpc-listen-address: 0.0.0.0
       grpc-port: 5665
       grpc-tls-enabled: false
-      update-interval: 60
