--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ jackson = "2.18.0"
 mockito = "5.14.2"
 springBoot = "3.3.4"
 junitJupiter = "5.11.2"
+junit5SystemExit = "2.0.0"
 xmlUnit = "2.10.0"
 bouncyCastle = "1.78.1"
 slf4j = "2.0.16"
@@ -54,6 +55,7 @@ springCloud-bom = { module = "org.springframework.cloud:spring-cloud-dependencie
 junit-jupiterEngine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiter" }
 junit-vintageEngine = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "junitJupiter" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junitJupiter" }
+junit-system-exit = { module = "com.ginsberg:junit5-system-exit", version.ref = "junit5SystemExit" }
 
 xmlunit-core = { module = "org.xmlunit:xmlunit-core", version.ref = "xmlUnit" }
 xmlunit-matchers = { module = "org.xmlunit:xmlunit-matchers", version.ref = "xmlUnit" }
