--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -49,3 +49,9 @@ xroad:
     grpc-host: localhost
     grpc-port: 5567
     grpc-tls-enabled: false
+  common:
+    server-conf:
+      cache-period: 60
+      client-cache-size: 100
+      service-cache-size: 1000
+      acl-cache-size: 100_000
